Bug 59454 - FILEOPEN: in particular .RTF page break after page 1 is ignored and page orientation from page 2 is wrong
Summary: FILEOPEN: in particular .RTF page break after page 1 is ignored and page orie...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: filter:rtf, regression
Depends on:
Blocks: RTF-Opening
  Show dependency treegraph
 
Reported: 2013-01-16 07:56 UTC by Timon
Modified: 2025-04-07 16:56 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with wrong orientation and ignored page break in LibO 4 and screenshots from different office suites (202.95 KB, application/x-zip)
2013-01-16 07:56 UTC, Timon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timon 2013-01-16 07:56:53 UTC
Created attachment 73138 [details]
Example file with wrong orientation and ignored page break in LibO 4 and screenshots from different office suites

LibO Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799) on Windows XP SP3 Russian

RTF file with different page orientation: page 1 is in portrait orientation, from page 2 landscape orientation is used. But LibO ignores it.

Also there is a page break after page 1 (before table), but it is also ignored by LibO.

MS Office 2003 Word; MS Office 2007 Word; Apache Open Office 3.4.1 Writer AOO 3.4.1m1 (Build: 9593) - Rev. 1372282  open this document absolutely correct -  with portrait orientation on page 1 and landscape orientation from page 2, table is also on page 2.
Comment 1 Joel Madero 2013-01-16 16:18:57 UTC
I can confirm this on 3.6.3.2 so I'm changing the version # to reflect this.

@Reporter - Version reflects the oldest version that it is confirmed that the issue exists, not the latest that the bug has been seen on.

Marking as:
3.6.3.2
Platform ALL
OS ALL

New (confirmed)
Normal (can prevent high quality work for some users)
Medium (default for Normal bugs, I don't see a reason why we should change this in this case)


Thanks for reporting!
Comment 2 Timon 2013-01-17 16:20:05 UTC
(In reply to comment #1)
> I can confirm this on 3.6.3.2 so I'm changing the version # to reflect this.
> 
> @Reporter - Version reflects the oldest version that it is confirmed that
> the issue exists, not the latest that the bug has been seen on.
> 
> Marking as:
> 3.6.3.2
> Platform ALL
> OS ALL
> 
> New (confirmed)
> Normal (can prevent high quality work for some users)
> Medium (default for Normal bugs, I don't see a reason why we should change
> this in this case)
> 
> 
> Thanks for reporting!

@Joel Madero - I know, that in bug report I must specify the oldest version from where problem started, but I can't afford to keep all previous versions of LibO for reviews. That's why I specify LibO version that I use in daily work (despite the fact that it is still not recommended for everyday use). In LibO 3.5 and 3.6 there was a huge amount of bugs that forced me to install latest version. Yes, I have to use both LibO and AOO, because if some file could not be opened in one suite, it could be opened in another without any problems.
Comment 3 Jean-Baptiste Faure 2013-08-16 18:18:18 UTC
AOO 3.4.1 is not the ancestor of LO 3.6, so this bug can't be a regression from AOO. Changed summary accordingly.
Comment 4 Alexandr 2014-07-17 06:47:17 UTC
Reproducible with LibreOffice 4.2.5 and 4.3.0.2 on Debian x86_64.
Comment 5 Timon 2015-05-19 07:17:40 UTC
Problem is still present in LibreOffice Version: 4.4.3.2 Build ID : 88805f81e9fe61362df02b9941de8e38a9b5fd16 Locale: ru_RU on Windows XP SP3 Russian
Comment 6 Timur 2015-10-05 20:11:51 UTC
LO 3.3.4 opens it ok, than table is messed in 3.4, and there's problem with orientation in 3.5. Similar to Bug 64372, section break problem.
Comment 7 Miklos Vajna 2015-10-22 23:10:57 UTC
Section break right before a table is not handled, I'll take care of this.
Comment 8 Commit Notification 2015-10-26 07:58:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e57752170e604c85a6fe8aeaa38784796e00bab1

tdf#59454 RTF import: handle section break right before a table

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Miklos Vajna 2015-11-10 07:39:01 UTC
libreoffice-5-0 review: https://gerrit.libreoffice.org/19878
Comment 10 Commit Notification 2015-11-10 11:49:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=610e6fddbc19dd2ac23b6a6cf4d8cbfb0dcf589a&h=libreoffice-5-0

tdf#59454 RTF import: handle section break right before a table

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Timon 2015-12-03 08:10:23 UTC
Works for me in 
Version: 5.0.4.1
Build ID: 2def61bcbb29a7a8611b833682fe1291910b11ad
Locale: ru-RU (ru_RU)
under Windows XP SP3
Comment 12 Robinson Tryon (qubit) 2015-12-17 05:49:38 UTC Comment hidden (obsolete)