tdf#59454 RTF import: handle section break right before a table

DOCX import could handle this situation, as commit
2e8aad6d45c53d554ccaf26de998ede708cfc289 (fdo#39056 fdo#75431 Section
Properties if section starts with table, 2014-04-18) added support for
this situation, in case NS_ooxml::LN_tblStart/End is emitted by the
tokenizer.

Fix the problem by sending these tokens in the RTF tokenizer as well, at
least for non-nested tables.

Change-Id: Ifedb121754634529c27820dd5175e7f9e24019e1
(cherry picked from commit e57752170e604c85a6fe8aeaa38784796e00bab1)