sw/qa/extras/rtfimport/rtfimport.cxx
@@ -2361,6 +2361,12 @@ DECLARE_RTFIMPORT_TEST(testTdf94435, "tdf94435.rtf")
     CPPUNIT_ASSERT_EQUAL(style::ParagraphAdjust_CENTER, static_cast<style::ParagraphAdjust>(getProperty<sal_Int16>(getParagraph(1), "ParaAdjust")));
 }
 
+DECLARE_RTFIMPORT_TEST(testTdf59454, "tdf59454.rtf")
+{
+    // This was 1, section break was ignored right before a table.
+    CPPUNIT_ASSERT_EQUAL(2, getPages());
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
